--- a/frontend/src/app.html
+++ b/frontend/src/app.html
@@ -1,12 +1,18 @@
 <!doctype html>
+<script>
+	// import '@fontsource/lexend';
+	// import lexendWoff2 from '@fontsource/lexend/files/lexend-latin-400.woff2?url';
+</script>
+
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
+
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%sveltekit.head%
 	</head>
-	<body data-sveltekit-preload-data="hover">
+	<body data-sveltekit-preload-data="hover" class="min-h-screen font-sans antialiased">
 		<div style="display: contents">%sveltekit.body%</div>
 	</body>
 </html>
