--- a/frontend/src/app.html
+++ b/frontend/src/app.html
@@ -7,7 +7,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
+		<link rel="icon" href="%sveltekit.assets%/lucy-galaxy.svg" />
 
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%sveltekit.head%
